--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
         </a>
 
         <div class="details">
-            <b>{{ post.date | date: "%d %B %Y" }}</b>
+            <p>{{ post.date | date: "%d %B %Y" }}</p>
             <br>
             {% if post.tags %}
                 <b>[</b>
