--- a/404.html
+++ b/404.html
@@ -1,7 +1,11 @@
 ---
-layout: default
-permalink: /404.html
-title: 404 - Page not found
+layout: base.njk
+title: "404: Page Not Found"
+permalink: 404.html
 ---
 
-<img src="{{site.url}}{{site.posturl}}/assets/404.jpg">
+<div class="content">
+    <h1>404: Page Not Found</h1>
+    <p>The page you're looking for doesn't exist.</p>
+    <p><a href="/">Return to home</a></p>
+</div>
